<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="285dp"
            android:layout_marginStart="5dp"
            android:height="200dp"
            android:gravity="center"
            android:text="@string/weather"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="CityName"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/coordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/lattitude_longitude"
                    android:textColor="@color/black" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <TextView
                        android:id="@+id/weather"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="weather"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="20dp"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:id="@+id/temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="temp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:padding="7dp"
                            android:textStyle="bold"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/min_temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="min: temp"
                                android:padding="5dp"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/max_temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="max: temp"
                                android:padding="5dp"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ffffff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#FADBD8"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">
                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1000"
                            android:paddingEnd="100dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pressure"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="201dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_24"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            android:layout_marginTop="10dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/speed"
                    android:textSize="25sp"
                    android:padding="5dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:textStyle="bold"
                        android:text="@string/degree"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>